# auora-test

./: .gitignore  README.md  environment.yml  pyproject.toml
src/: main.py
src/battery_dispatcher/: __init__.py  price_models.py  trade_controller.py  trade_strat.py
src/battery_dispatcher/data/: batttery_constraints.xlsx
